create model end

--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -12,7 +12,13 @@
 </head>
 <body>
     <div class="container">
-        sdfasdfsd
+        <h1 class="mb-4">New Article</h1>
+        
+        <form action="/articles" method="POST">
+            <%- include('_form_fields') %>
+
+        </form>
+
     </div>
  
     </div>
