--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -25,6 +25,8 @@
             
               </div>
               <div class="card-text mb-2"><%= article.description %></div>
+              <a href="articles/<%= article.slug %>"
+                class="btn btn-primary">Read More</a>
 
             </div>
           </div>
